--- a/sample.tex
+++ b/sample.tex
@@ -35,21 +35,27 @@ breaklinks=true,
 % (e.g. for preprints). Remove for camera ready copy.
 \toappear{Submitted for review to CHI 2009.}
 
-\title{Using AI and Social media to amalyse Depression}
+\title{Using AI and Social Media to analyse Depression}
 \numberofauthors{2}
 \author{
   \alignauthor Harun Gunasekaran\\
-    \affaddr{University of Massachusetts-Lowell}\\
-    \email{harun_gunasekaran@student.uml.edu}\\
-  \alignauthor Lekan Osagi\\
-    \affaddr{University of Massachusetts-Lowel}\\
-    \email{lekan_osagiw@student.uml.edu}
+    \affaddr{University of Massachusetts}\\
+    \affaddr{Lowell}\\
+    \email{harun\_gunaseakran@student.uml.edu}
+  \alignauthor Author 2\\
+    \affaddr{Affiliation}\\
+    \affaddr{Affiliation}\\
+    \email{author2@b.com}
 }
 
 \maketitle
 
 \begin{abstract}
-  
+  In this project ,we implement three modules which will work with 
+ each other inorder to analyse and state a person is 
+ depressed or not. And the main objective of the project is to show
+ the percentage to which the person is depressed 
+ thus the user can be directed to the available help services.
 \end{abstract}
 
 \keywords{put author keywords here} 
