--- a/sample.tex
+++ b/sample.tex
@@ -50,43 +50,28 @@ breaklinks=true,
 
 \maketitle
 
-\begin{abstract}
+\begin{Abstract}
   In this project ,we implement three modules which will work with 
  each other inorder to analyse and state a person is 
- depressed or not. And the main objective of the project is to show
+ depressed or not. And the main primary objective of the project is to show
  the percentage to which the person is depressed 
- thus the user can be directed to the available help services.
+ thus the user can be directed to the available help services. Inorder to do this we implemend a simple but effective three modules where each one has its unique role of obtaining all the needed data about the user. By combining the results of all of this modules we can easily make decisions and thus by parsing the social media data into the NLP we can state whether a person is depressed or not.
 \end{abstract}
 
-\keywords{put author keywords here} 
+\keywords{Natural Language Processing, Naive bayes Classifier, facepy} 
 
-\category{H.5.2}{Information Interfaces and Presentation}{Miscellaneous}[Optional sub-category]
+
 
 \section{Introduction}
+  It is estimated that more than 50\% of teenager’s self harm and suicides were caused by depression[5] . It is also found that the number of human beings ending their life or struggling in their life because of stress and Depression will double in the next five years(‘4th edition of the Diagnostic and Statistical Manual of Mental Disorders (DSM-IV)’). Though it is widely argued what is the main causes of Depression, many live without even realising that they struggle from depression . This includes parents of adolescents who needs proper care and support.  And it is also found that more than 70\% of depressed prefer not to talk about their issues with others, since they are scared of being bullied and misjudged[4]. The recent research works have shown how social network and mental health correlate with each other , thus by analysing one’s social network preference can determine how mentally sound they are[3].
+  And this is where we hope that using an Artificial Intelligence[1] as an intermediate to analyse the behaviour of the person can help and identify the depression level and thus can help them to find proper support. We intend to use the social network data from sites like facebook and also setting up questionnaires over a period of month to obtain the needed data . One of the main work done is similar field is by Microsoft research division[2] provided us with the needed base works, we found that the research work utilizes NLP to compare with the already defined dataset. And we intend to use similar approach but also use the Tags used by the user and associating them with the questionnaires.
 
-This format is to be used for submissions that are published in the
-conference proceedings.  We wish to give this volume a consistent,
-high-quality appearance. We therefore ask that authors follow some
-simple guidelines. In essence, you should format your paper exactly
-like this document. The easiest way to do this is simply to download a
-template from the conference web site, and replace the content with
-your own material. The template file contains specially formatted
-styles (e.g., Normal, Heading, Bullet, Table Text, References, Title,
-Author, Affiliation) that will reduce your work in formatting your
-submission.
+\section{Project Description}
 
-\section{Page Size and Columns}
+The project can be described interms of modules for easier understanding. The primary objective is to compare the modules and thus we can provide an effective result. 
 
-On each page your material (not including the page number) should fit
-within a rectangle of 18 x 23.5 cm (7 x 9.25 in.), centered on a US
-letter page, beginning 1.9 cm (.75 in.) from the top of the page, with
-a .85 cm (.33 in.) space between two 8.4 cm (3.3 in.) columns.  On an
-A4 page, use a text area of the same dimensions (18 x 23.5 cm.), again
-centered.  Right margins should be justified, not ragged. Beware,
-especially when using this template on a Macintosh, Word can change
-these dimensions in unexpected ways.
 
-\section{Typeset Text}
+\section{Quetionare Module}
 
 Prepare your submissions on a word processor or typesetter.  Please
 note that page layout may change slightly depending upon the printer
@@ -96,7 +81,7 @@ at the top of the left column on page 2, and Table 1 appears at the
 top of the right column on page 2.  You may need to reposition the
 figures if your page layout or PDF-generation software is different.
 
-\subsection{Title and Authors}
+\subsection{social media module}
 
 Your paper's title, authors and affiliations should run across the
 full width of the page in a single column 17.8 cm (7 in.) wide.  The
@@ -115,7 +100,7 @@ paper. Please use full international addresses and telephone dialing
 prefixes.  Leave one 10-pt line of white space below the last line of
 affiliations.
 
-\subsection{Abstract and Keywords}
+\subsection{Classifier module}
 
 Every submission should begin with an abstract of about 150 words,
 followed by a set of keywords. The abstract and keywords should be
@@ -131,7 +116,7 @@ System~\cite{acm_categories}.  In general, it should only be necessary
 to pick one or more of the H5 subcategories, see
 http://www.acm.org/class/1998/H.5.html
 
-\subsection{Normal or Body Text}
+\subsection{Integration of modules}
 
 Please use a 10-point Times Roman font or, if this is unavailable,
 another proportional font with serifs, as close as possible in
@@ -142,17 +127,20 @@ Macintosh, use the font named Times and not Times New Roman. Please
 use sans-serif or non-proportional fonts only for special purposes,
 such as headings or source code text.
 
-\subsection{First Page Copyright Notice}
+\subsection{Analysis of Result}
 
 Leave 3 cm (1.25 in.) of blank space for the copyright notice at the
 bottom of the left column of the first page. In this template a
 floating text box will automatically generate the required space.
 
-\subsection{Subsequent Pages}
+\subsection{Discussion}
 
 On pages beyond the first, start at the top of the page and continue
 in double-column format.  The two columns on the last page should be
 of equal length.
+
+\subsection{Conclusion}
+
 
 \subsection{References and Citations}
 
