--- a/sample.tex
+++ b/sample.tex
@@ -54,8 +54,8 @@ breaklinks=true,
   In this project ,we implement three modules which will work with 
  each other inorder to analyse and state a person is 
  depressed or not. And the main primary objective of the project is to show
- the percentage to which the person is depressed 
- thus the user can be directed to the available help services. Inorder to do this we implemend a simple but effective three modules where each one has its unique role of obtaining all the needed data about the user. By combining the results of all of this modules we can easily make decisions and thus by parsing the social media data into the NLP we can state whether a person is depressed or not.
+ the percentage to which the user is depressed, 
+ thus the user can be directed to the available help services. By combining the results of all of three modules we can easily make decisions and thus by parsing the social media data into the NLP we can state whether a person is depressed or not.
 \end{abstract}
 
 \keywords{Natural Language Processing, Naive bayes Classifier, facepy} 
@@ -68,20 +68,21 @@ breaklinks=true,
 
 \section{Project Description}
 
-The project can be described interms of modules for easier understanding. The primary objective is to compare the modules and thus we can provide an effective result. 
+The project can be described interms of modules for easier understanding. The primary objective is to compare the modules and thus we can provide an effective result. The project uses the Natural language Toolkit along with SKLearn API to implement Naive Bayes Classifier. The NLTK provides with all the needed tools such as Tokenizer, tagger parts of speech tagger. and SKlearn API provides us with the needed classifier maodules. The effective but simple way for the project to succed we are gathering the user datas over a period of a month. Our objective was to analyses every weekend thus the major activities can be discovered. 
 
 
 \section{Quetionare Module}
+The first module of the project in which we ask user a set of five questions over a period of a month. This questions are defined by psycologiest to detect the depression . Inother words each question has its own weightage thus at the end of the five questions those who score more then 20 can be considered high risk and those who score between 15 to 20 as medium and less then 15 as low risk. This modules helps us to identify and erradicate the false positive while analysing the social media data. A typical set of quetionare will be as of : 
+1. Have you slept properly this week?. 
+2. How was your week interms of happiness?.
+3. Have you ever felt sad the whole week?.
+4. will you say your week was upto your satisfaction?
 
-Prepare your submissions on a word processor or typesetter.  Please
-note that page layout may change slightly depending upon the printer
-you have specified.  For this document, printing to Adobe Acrobat PDF
-Writer was specified.  In the resulting page layout, Figure 1 appears
-at the top of the left column on page 2, and Table 1 appears at the
-top of the right column on page 2.  You may need to reposition the
-figures if your page layout or PDF-generation software is different.
+And the answers for this module will be of numerals 0 to 5 . Once the module executes for the first time , it will calculate the score as per the input of the user and categorise the user. If the user fall under High risk range his social media data will be analysed immediately . If he falls under medium category he will be made to take the test again after a week but still the social media data will be analysed for comparition.For this project we used a simple python based command prompt through which the user can interact with the module. 
 
-\subsection{social media module}
+
+\subsection{Social Media module}
+
 
 Your paper's title, authors and affiliations should run across the
 full width of the page in a single column 17.8 cm (7 in.) wide.  The
